[gd_scene load_steps=7 format=3 uid="uid://cj7xptl35r1m5"]

[ext_resource type="PackedScene" uid="uid://bes2ufmc3jfxf" path="res://game/player/player.tscn" id="1_fvt4u"]
[ext_resource type="Script" path="res://game/levels/scene_1/textures.gd" id="2_g8t8m"]
[ext_resource type="PackedScene" uid="uid://bxiwrk1bv5x6q" path="res://game/levels/scene_1/assets/clock.tscn" id="3_ac4in"]
[ext_resource type="PackedScene" uid="uid://bqdl5k375s3ks" path="res://game/UI/game_UI/GameUI.tscn" id="4_a057n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1d5pu"]
size = Vector2(368, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hc6wy"]
size = Vector2(8, 432.5)

[node name="scene_1" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_fvt4u")]
z_index = 1
position = Vector2(336, 80)

[node name="Environment" type="Node2D" parent="."]

[node name="Walls" type="Node2D" parent="Environment"]

[node name="bottomWall" type="StaticBody2D" parent="Environment/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Walls/bottomWall"]
position = Vector2(184, 408.5)
shape = SubResource("RectangleShape2D_1d5pu")

[node name="topWall" type="StaticBody2D" parent="Environment/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Walls/topWall"]
position = Vector2(184, 24)
shape = SubResource("RectangleShape2D_1d5pu")

[node name="LeftWall" type="StaticBody2D" parent="Environment/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Walls/LeftWall"]
position = Vector2(364, 216)
shape = SubResource("RectangleShape2D_hc6wy")

[node name="Textures" type="Control" parent="Environment"]
layout_mode = 3
anchors_preset = 0
offset_top = 48.0
offset_right = 40.0
offset_bottom = 88.0
script = ExtResource("2_g8t8m")

[node name="Floor" type="Panel" parent="Environment/Textures"]
layout_mode = 0
offset_right = 360.0
offset_bottom = 336.0

[node name="WallTop" type="Panel" parent="Environment/Textures"]
layout_mode = 0
offset_top = -48.0
offset_right = 360.0

[node name="WallBot" type="Panel" parent="Environment/Textures"]
layout_mode = 0
offset_top = 336.0
offset_right = 360.0
offset_bottom = 384.0

[node name="WallRight" type="Panel" parent="Environment/Textures"]
layout_mode = 0
offset_left = 360.0
offset_top = -48.0
offset_right = 376.0
offset_bottom = 384.0

[node name="Clock" parent="." instance=ExtResource("3_ac4in")]
position = Vector2(352, 184)
scale = Vector2(0.25, 0.25)

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" parent="UI" instance=ExtResource("4_a057n")]
